# yap

./: .gitignore  README.md  install.sh  pyproject.toml  yap
src/yap/: __init__.py  __main__.py  cli.py  config.py  correct.py  output.py  record.py  server.py  transcribe.py
src/yap/static/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_correct.py  test_output.py  test_record.py  test_server.py  test_transcribe.py
