[project]
name = "yap-dictation"
version = "0.1.4"
description = "Talk is cheap. Voice dictation for the terminal."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "Xuefei Wang" },
]
keywords = ["voice", "dictation", "whisper", "speech-to-text", "transcription"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "faster-whisper>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/xuefei-wang/yap"
Repository = "https://github.com/xuefei-wang/yap"
Issues = "https://github.com/xuefei-wang/yap/issues"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
web = ["websockets>=12.0"]
windows = ["pyautogui>=0.9", "pyperclip>=1.8"]

[project.scripts]
yap = "yap.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/yap"]
